# couchbase-python-client

./: .gitignore  CMakeLists.txt  annotations_generated.txt  autobind.py  cbuild_cfg.json  cmake_build.py  cmodule.py  dev_requirements.txt  make.sh  nose2-junit.xml  requirements.txt  setup.py  src.json
acouchbase/: asyncio_iops.py  bucket.py
acouchbase/py34only/: iterator.py
acouchbase/tests/: fixtures.py  py34only.py
couchbase/: __init__.py  _bootstrap.py  _ixmgmt.py  admin.py  bucket.py  cluster.py  connstr.py  exceptions.py  fulltext.py  n1ql.py  priv_constants.py  subdocument.py  tracer.py
couchbase/iops/: select.py
couchbase/tests/: __init__.py  base.py  importer.py  launcher.py  test_sync.py
couchbase/tests/cases/: admin_t.py  analytics_t.py  append_t.py  arithmetic_t.py  badargs_t.py  cbftstrings_t.py  cluster_t.py  connection_t.py  connstr_t.py  crypto_t.py  datastructures_t.py  delete_t.py  design_t.py  diag_t.py  dupkeys_t.py  empty_key_t.py  encodings_t.py  endure_t.py  enh_err_t.py  excextra_t.py  flush_t.py  format_t.py  get_t.py  health_t.py  iops_t.py  itertypes_t.py  itmops_t.py  ixmgmt_t.py  lock_t.py  lockmode_t.py  misc_t.py  mutationtokens_t.py  n1ql_t.py  n1qlstrings_t.py  observe_t.py  pipeline_t.py  results_t.py  rget_t.py  scenarios_t.py  set_converters_t.py  (+12 more)
couchbase/tests/cases/v3/: samples_t.py  scenarios_t.py  sdkthree_t.py  set_t.py
couchbase/v3/: JSONdocument.py  __init__.py  bucket.py  cluster.py  collection.py  durability.py  exceptions.py  getspec.py  mutate_in.py  options.py  readspec.py  result.py  subdoc.py
couchbase/views/: iterator.py
couchbase_genned/cppyy/gbl/: Couchbase.pyi
couchbase_v2/: __init__.py  _bootstrap.py  _ixmgmt.py  _logutil.py  admin.py  analytics.py  analytics_ingester.py  bucket.py  bucketmanager.py  cbas.py  cluster.py  connection.py  crypto.py  exceptions.py  fulltext.py  items.py  mockserver.py  mutation_state.py  n1ql.py  result.py  subdocument.py  transcoder.py  user_constants.py
couchbase_v2/async/: __init__.py
couchbase_v2/asynchronous/: __init__.py  bucket.py  fulltext.py  n1ql.py  rowsbase.py  view.py
couchbase_v2/iops/: base.py  select.py
couchbase_v2/tests/: base.py  importer.py  test_sync.py
couchbase_v2/tests/cases/: admin_t.py  analytics_t.py  append_t.py  arithmetic_t.py  badargs_t.py  cbftstrings_t.py  cluster_t.py  connection_t.py  connstr_t.py  crypto_t.py  datastructures_t.py  delete_t.py  design_t.py  diag_t.py  dupkeys_t.py  empty_key_t.py  encodings_t.py  endure_t.py  enh_err_t.py  excextra_t.py  flush_t.py  format_t.py  get_t.py  iops_t.py  itertypes_t.py  itmops_t.py  ixmgmt_t.py  lock_t.py  lockmode_t.py  misc_t.py  mutationtokens_t.py  n1ql_t.py  n1qlstrings_t.py  observe_t.py  pipeline_t.py  results_t.py  rget_t.py  set_converters_t.py  set_t.py  spatial_t.py  (+10 more)
couchbase_v2/views/: iterator.py  params.py
couchbase_v3/: __init__.py  bucket.py  cluster.py  collection.py  durability.py  exceptions.py  getspec.py  options.py  result.py  subdoc.py
examples/: abench.py  basic.py  bench.py  connection-pool.py  docloader.py  gbench.py  iops_demo.py  item.py  reversed_keys.py  search_keywords.py  txbench.py  txpillowfight.py
examples/v3/: overview.py
gcouchbase/: bucket.py  connection.py  iops_gevent0x.py  iops_gevent10.py
gcouchbase/tests/: __init__.py  test_api.py  test_gevent.py
jenkins/: dev_build.sh
metadata_spec/test/cases/: addressbook_protobuf.json
src/: Doxyfile  bindings.cpp  bucket.c  callbacks.c  cntl.c  constants.c  convert.c  counter.c  crypto.c  exceptions.c  ext.c  fts.c  genned.cpp  get.c  htresult.c  http.c  iops.c  ixmgmt.c  lcb_cxx.cpp  lcb_ot.c  lcb_ot.h  lcb_v4_backport.c  lcb_v4_backport.h  lcb_v4_wrapper.c  lcb_v4_wrapper.h  miscops.c  multiresult.c  n1ql.c  observe.c  oputil.c  oputil.h  pipeline.c  py_import_call_execute.c  py_import_call_execute.h  pycbc.h  pycbc_http.c  pycbc_http.h  pycbc_subdocops.c  pycbc_subdocops.h  pycbc_subdocops_common.h  (+6 more)
tools/: build.sh  update_types.sh  update_types_pyannotate.sh
txcouchbase/: bucket.py  connection.py  iops.py
txcouchbase/tests/: __init__.py  base.py  test_fulltext.py  test_n1ql.py  test_ops.py  test_txconn.py  test_views.py
