cmake_minimum_required(VERSION 3.8)
project(couchbase_python_client)

include_directories(/usr/local/Cellar/python/2.7.13_1/Frameworks/Python.framework/Versions/2.7/include/python2.7)
include_directories(/Users/ellis_breen/workspaces/public/libcouchbase/include
        /Users/ellis_breen/workspaces/public/libcouchbase/cmake-build-debug/generated)
#link_directories(/usr/local/Cellar/python/2.7.13_1/Frameworks/Python.framework/Versions/2.7/lib)
link_libraries(/usr/local/Cellar/python/2.7.13_1/Frameworks/Python.framework/Versions/2.7/lib/libpython2.7.dylib)
set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        acouchbase/tests/asyncio_tests.py
        acouchbase/tests/fixtures.py
        acouchbase/tests/py34only.py
        acouchbase/tests/py35only.py
        acouchbase/__init__.py
        acouchbase/asyncio_iops.py
        acouchbase/bucket.py
        acouchbase/iterator.py
        couchbase/async/__init__.py
        couchbase/async/bucket.py
        couchbase/async/events.py
        couchbase/async/n1ql.py
        couchbase/async/rowsbase.py
        couchbase/async/view.py
        couchbase/iops/__init__.py
        couchbase/iops/base.py
        couchbase/iops/select.py
        couchbase/tests/admin/__init__.py
        couchbase/tests/cases/__init__.py
        couchbase/tests/cases/admin_t.py
        couchbase/tests/cases/append_t.py
        couchbase/tests/cases/arithmetic_t.py
        couchbase/tests/cases/badargs_t.py
        couchbase/tests/cases/cbftstrings_t.py
        couchbase/tests/cases/cluster_t.py
        couchbase/tests/cases/connection_t.py
        couchbase/tests/cases/datastructures_t.py
        couchbase/tests/cases/delete_t.py
        couchbase/tests/cases/design_t.py
        couchbase/tests/cases/dupkeys_t.py
        couchbase/tests/cases/empty_key_t.py
        couchbase/tests/cases/encodings_t.py
        couchbase/tests/cases/endure_t.py
        couchbase/tests/cases/excextra_t.py
        couchbase/tests/cases/flush_t.py
        couchbase/tests/cases/format_t.py
        couchbase/tests/cases/get_t.py
        couchbase/tests/cases/iops_t.py
        couchbase/tests/cases/itertypes_t.py
        couchbase/tests/cases/itmops_t.py
        couchbase/tests/cases/ixmgmt_t.py
        couchbase/tests/cases/lock_t.py
        couchbase/tests/cases/lockmode_t.py
        couchbase/tests/cases/misc_t.py
        couchbase/tests/cases/mutationtokens_t.py
        couchbase/tests/cases/n1ql_t.py
        couchbase/tests/cases/n1qlstrings_t.py
        couchbase/tests/cases/observe_t.py
        couchbase/tests/cases/pipeline_t.py
        couchbase/tests/cases/results_t.py
        couchbase/tests/cases/rget_t.py
        couchbase/tests/cases/set_converters_t.py
        couchbase/tests/cases/set_t.py
        couchbase/tests/cases/spatial_t.py
        couchbase/tests/cases/stats_t.py
        couchbase/tests/cases/subdoc_t.py
        couchbase/tests/cases/touch_t.py
        couchbase/tests/cases/transcoder_t.py
        couchbase/tests/cases/verinfo_t.py
        couchbase/tests/cases/view_iterator_t.py
        couchbase/tests/cases/view_t.py
        couchbase/tests/cases/viewstrings_t.py
        couchbase/tests/cases/xattr_t.py
        couchbase/tests/__init__.py
        couchbase/tests/base.py
        couchbase/tests/importer.py
        couchbase/tests/test_sync.py
        couchbase/views/__init__.py
        couchbase/views/iterator.py
        couchbase/views/params.py
        couchbase/__init__.py
        couchbase/_bootstrap.py
        couchbase/_ixmgmt.py
        couchbase/_logutil.py
        couchbase/_pyport.py
        couchbase/admin.py
        couchbase/auth_domain.py
        couchbase/bucket.py
        couchbase/bucketmanager.py
        couchbase/cbas.py
        couchbase/cluster.py
        couchbase/connection.py
        couchbase/connstr.py
        couchbase/exceptions.py
        couchbase/experimental.py
        couchbase/fulltext.py
        couchbase/items.py
        couchbase/mockserver.py
        couchbase/mutation_state.py
        couchbase/n1ql.py
        couchbase/priv_constants.py
        couchbase/result.py
        couchbase/subdocument.py
        couchbase/transcoder.py
        couchbase/user_constants.py
        docs/source/api/admin.rst
        docs/source/api/async.rst
        docs/source/api/convertfuncs.rst
        docs/source/api/couchbase.rst
        docs/source/api/datastructures.rst
        docs/source/api/exceptions.rst
        docs/source/api/fulltext.rst
        docs/source/api/gcouchbase.rst
        docs/source/api/items.rst
        docs/source/api/logging.rst
        docs/source/api/n1ql.rst
        docs/source/api/results.rst
        docs/source/api/subdoc.rst
        docs/source/api/threads.rst
        docs/source/api/transcoder.rst
        docs/source/api/txcouchbase.rst
        docs/source/api/views.rst
        docs/source/conf.py
        docs/source/index.rst
        docs/source/pycbc_xref.py
        docs/make.bat
        docs/Makefile
        examples/abench.py
        examples/basic.py
        examples/bench.py
        examples/connection-pool.py
        examples/docloader.py
        examples/gbench.py
        examples/iops_demo.py
        examples/item.py
        examples/reversed_keys.py
        examples/search_keywords.py
        examples/twist-sample.py
        examples/txbasic.py
        examples/txbench.py
        examples/txview.py
        gcouchbase/tests/__init__.py
        gcouchbase/tests/test_api.py
        gcouchbase/tests/test_gevent.py
        gcouchbase/__init__.py
        gcouchbase/bucket.py
        gcouchbase/connection.py
        gcouchbase/iops_gevent0x.py
        gcouchbase/iops_gevent10.py
        src/bucket.c
        src/callbacks.c
        src/cntl.c
        src/connevents.c
        src/constants.c
        src/convert.c
        src/counter.c
        src/ctranscoder.c
        src/exceptions.c
        src/ext.c
        src/fts.c
        src/get.c
        src/htresult.c
        src/http.c
        src/iops.c
        src/iops.h
        src/ixmgmt.c
        src/miscops.c
        src/mresdict.h
        src/multiresult.c
        src/n1ql.c
        src/observe.c
        src/opresult.c
        src/oputil.c
        src/oputil.h
        src/pipeline.c
        src/pycbc.h
        src/result.c
        src/store.c
        src/typeutil.c
        src/views.c
        txcouchbase/tests/__init__.py
        txcouchbase/tests/base.py
        txcouchbase/tests/test_n1ql.py
        txcouchbase/tests/test_ops.py
        txcouchbase/tests/test_txconn.py
        txcouchbase/tests/test_views.py
        txcouchbase/__init__.py
        txcouchbase/bucket.py
        txcouchbase/connection.py
        txcouchbase/iops.py
        CONTRIBUTING.md
        couchbase_version.py
        dev_requirements.txt
        LICENSE
        MANIFEST.in
        README.rst
        requirements.txt
        setup.py
        tests.ini.sample)

include_directories(src)

add_executable(couchbase_python_client ${SOURCE_FILES})